added additional figure

--- a/covid19/index.html
+++ b/covid19/index.html
@@ -3,12 +3,20 @@ layout: default
 title: Easton R. White | COVID-19
 ---
 
+<h2>COVID-19 Tracking</h2>
 
-This page will track daily state-level differences in the COVID-19 dynamics for the United States. All the data used here comes from <a href="https://github.com/CSSEGISandData/COVID-19">John Hopkins University and the CDC </a>.
+This page will track daily state-level differences in the COVID-19 dynamics for the United States. All the data used here comes from <a href="https://github.com/CSSEGISandData/COVID-19">John Hopkins University and the CDC </a>. A preprint and github link for this project will be posted here soon.
 
  <figure>
-  <img src="figures/state_responses.jpeg" alt="Trulli" style="width:100%">
-  <figcaption>log(Number of cases) since day of at least 25 cases for various US states. Subtracting initial case number of the y-axis was neccessary to standardize the states.</figcaption>
+  <img src="figures/cases_vs_time-1.jpeg" alt="Trulli" style="width:80%">
+  <figcaption>(left panel) Total number of COVID-19 cases for the US over time. (right panel) Total log number of COVID-19 cases for the US over time. The red, dashed line indicates the best fit curve. A straight line on a log graph indicates exponential growth. Therefore, the US started seeing exponential growth in cases after March 1st.</figcaption>
+</figure> 
+
+cases_vs_time-1.pdf
+
+ <figure>
+  <img src="figures/state_responses.jpeg" alt="Trulli" style="width:80%">
+  <figcaption>Fig 2: log(Number of cases) since day of at least 25 cases for various US states. Subtracting initial case number of the y-axis was neccessary to standardize the states.</figcaption>
 </figure> 
 
 
