--- a/covid19/index.html
+++ b/covid19/index.html
@@ -9,14 +9,19 @@ This page will track daily state-level differences in the COVID-19 dynamics for 
 
  <figure>
   <img src="figures/cases_vs_time-1.jpeg" alt="Trulli" style="width:80%">
-  <figcaption>(left panel) Total number of COVID-19 cases for the US over time. (right panel) Total log number of COVID-19 cases for the US over time. The red, dashed line indicates the best fit curve. A straight line on a log graph indicates exponential growth. Therefore, the US started seeing exponential growth in cases after March 1st.</figcaption>
+  <figcaption>Fig 1: (left panel) Total number of COVID-19 cases for the US over time. (right panel) Total log number of COVID-19 cases for the US over time. The red, dashed line indicates the best fit curve. A straight line on a log graph indicates exponential growth. Therefore, the US started seeing exponential growth in cases after March 1st.</figcaption>
 </figure> 
 
-cases_vs_time-1.pdf
 
  <figure>
   <img src="figures/state_responses.jpeg" alt="Trulli" style="width:80%">
   <figcaption>Fig 2: log(Number of cases) since day of at least 25 cases for various US states. Subtracting initial case number of the y-axis was neccessary to standardize the states.</figcaption>
+</figure> 
+
+
+ <figure>
+  <img src="figures/state_responses_map.jpeg" alt="Trulli" style="width:90%">
+  <figcaption>Fig 2: Doubling time (in days) for various US states with at least 25 cases. </figcaption>
 </figure> 
 
 
