--- a/covid19/index.html
+++ b/covid19/index.html
@@ -9,19 +9,19 @@ This page will track daily state-level differences in the COVID-19 dynamics for 
 
  <figure>
   <img src="figures/cases_vs_time-1.jpeg" alt="Trulli" style="width:80%">
-  <figcaption>Fig 1: (left panel) Total number of COVID-19 cases for the US over time. (right panel) Total log number of COVID-19 cases for the US over time. The red, dashed line indicates the best fit curve. A straight line on a log graph indicates exponential growth. Therefore, the US started seeing exponential growth in cases after March 1st.</figcaption>
+  <figcaption>Fig 1: (left panel) Total number of COVID-19 cases for the US over time. (center panel) Total log number of COVID-19 cases for the US over time. (right panel) Rolling doubling time (7-day windows).</figcaption>
 </figure> 
 
 
  <figure>
   <img src="figures/state_responses.jpeg" alt="Trulli" style="width:80%">
-  <figcaption>Fig 2: log(Number of cases) since day of at least 25 cases for various US states. Subtracting initial case number of the y-axis was neccessary to standardize the states.</figcaption>
+  <figcaption>Fig 2: (a) The log number of cases over time for each individual state for the 10 days since their first day of 25 total cases. (b) The log number of cases over time for each individual state for the most recent 10 days. The light grey diagonal lines represent the growth trajectory for doubling times of 2, 4, and 10 days. The log number of the starting value (intial number of cases on first day when at least 25 cases were recorded) had to be subtracted on the y-axis to standarize the graph across states. (c) Rolling doubling times calculated over 10-day windows for each individual states. (d) Distributions of state-level doubling times early and more recent in the course of the outbreak. The figure was produced on 14-Apr-2020.</figcaption>
 </figure> 
 
 
  <figure>
   <img src="figures/state_responses_map.jpeg" alt="Trulli" style="width:90%">
-  <figcaption>Fig 2: Doubling time (in days) for various US states with at least 25 cases. </figcaption>
+  <figcaption>Fig 3: Doubling time (in days) for various US states with at least 25 cases. </figcaption>
 </figure> 
 
 
