--- a/covid19/index.html
+++ b/covid19/index.html
@@ -5,7 +5,7 @@ title: Easton R. White | COVID-19
 
 <h2>COVID-19 Tracking</h2>
 
-This page will track daily state-level differences in the COVID-19 dynamics for the United States. All the data used here comes from <a href="https://github.com/CSSEGISandData/COVID-19">John Hopkins University and the CDC </a>. We are now trying to determine what is causing the differing state-level trajectories. Please let me know if you are interested in contributing to this project. <a href="https://github.com/eastonwhite/COVID19_US_States"> A preprint and R code are available here</a>.
+This page will track daily state-level differences in the COVID-19 dynamics for the United States. All the data used here comes from <a href="https://github.com/CSSEGISandData/COVID-19">John Hopkins University and the CDC </a>. We are now trying to determine what is causing the differing state-level trajectories. Please let me know if you are interested in contributing to this project. <a href="https://www.medrxiv.org/content/10.1101/2020.04.14.20065318v1"> A preprint and R code are available here</a>.
 
  <figure>
   <img src="figures/cases_vs_time-1.jpeg" alt="Trulli" style="width:80%">
