--- a/research/covid_fisheries/index.html
+++ b/research/covid_fisheries/index.html
@@ -44,3 +44,43 @@ Our goal is to understand the downstream effects of these shutdowns on fisheries
   <li>Benjamin M. Althouse, Brendan Wallace, Brendan Case, Samuel V. Scarpino, Andrew M. Berdahl, <strong>Easton R. White</strong> and Laurent Hebert-Dufresne.  medRxiv. <a href="https://www.medrxiv.org/content/10.1101/2020.08.21.20179473v1" target="_blank" rel="noopener noreferrer">The unintended consequences of inconsistent pandemic control policies.</a></li>
 </ul> 	
 	
+
+<style>
+.container {
+  position: relative;
+  text-align: center;
+  color: white;
+}
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+</style>
+
+ <div class="container">
+  <img src="/images/socio_eco_mpas.png" alt="socio-eco-system" align="right" style="width:20%">
+  <div class="centered">Socio-ecological system</div>
+</div> 
+
+ <div class="container">
+  <img src="/images/socio_eco_mpas.png" alt="socio-eco-system" align="right" style="width:20%">
+  <div class="centered">Socio-ecological system</div>
+</div> 
+
+ <div class="container">
+  <img src="/images/socio_eco_mpas.png" alt="socio-eco-system" align="right" style="width:20%">
+  <div class="centered">Socio-ecological system</div>
+</div> 
+
+ <div class="container">
+  <img src="/images/socio_eco_mpas.png" alt="socio-eco-system" align="right" style="width:20%">
+  <div class="centered">Socio-ecological system</div>
+</div> 
+
+ <div class="container">
+  <img src="/images/socio_eco_mpas.png" alt="socio-eco-system" align="right" style="width:20%">
+  <div class="centered">Socio-ecological system</div>
+</div> 
