--- a/research/covid_fisheries/index.html
+++ b/research/covid_fisheries/index.html
@@ -69,7 +69,7 @@ Our goal is to understand the downstream effects of these shutdowns on fisheries
 }
 </style>
 
- <div class="container" ,class="brightness">
+ <div class="container brightness">
   <img src="/images/socio_eco_mpas.png" alt="socio-eco-system" align="right" style="width:20%">
   <div class="centered">Socio-ecological system</div>
 </div> 
