--- a/research/covid_fisheries/index.html
+++ b/research/covid_fisheries/index.html
@@ -70,8 +70,10 @@ Our goal is to understand the downstream effects of these shutdowns on fisheries
 </style>
 
  <div class="container brightness">
+<a href="https://www.qries.com/">
   <img src="/images/socio_eco_mpas.png" alt="socio-eco-system" align="right" style="width:20%">
   <div class="centered">Socio-ecological system</div>
+</a>
 </div> 
 
  <div class="container">
