--- a/covid19/index.html
+++ b/covid19/index.html
@@ -1,33 +1,21 @@
 ---
-layout: default
-title: Easton R. White | COVID-19
+twitter-timeline:
+  name: eastonrwhite
+  type: like
+  chrome: nofooter noscrollbar noborders transparent
+  tweet_limit: 3
+  inject_js: true
 ---
 
-<h2>COVID-19 Tracking</h2>
-
-This page will track daily state-level differences in the COVID-19 dynamics for the United States. All the data used here comes from <a href="https://github.com/CSSEGISandData/COVID-19">John Hopkins University and the CDC </a>. We are now trying to determine what is causing the differing state-level trajectories. Please let me know if you are interested in contributing to this project. <a href="https://www.medrxiv.org/content/10.1101/2020.04.14.20065318v1"> A preprint and R code are available here</a>.
-
- <figure>
-  <img src="figures/cases_vs_time-1.jpeg" alt="Trulli" style="width:80%">
-  <figcaption>Fig 1: (left panel) Total number of COVID-19 cases for the US over time. (center panel) Total log number of COVID-19 cases for the US over time. (right panel) Rolling doubling time (7-day windows).</figcaption>
-</figure> 
 
 
- <figure>
-  <img src="figures/state_responses.jpeg" alt="Trulli" style="width:80%">
-  <figcaption>Fig 2: (a) The log number of cases over time for each individual state for the 10 days since their first day of 25 total cases. (b) The log number of cases over time for each individual state for the most recent 10 days. The light grey diagonal lines represent the growth trajectory for doubling times of 2, 4, and 10 days. The log number of the starting value (intial number of cases on first day when at least 25 cases were recorded) had to be subtracted on the y-axis to standarize the graph across states. (c) Rolling doubling times calculated over 10-day windows for each individual states. (d) Distributions of state-level doubling times early and more recent in the course of the outbreak. The figure was produced on 14-Apr-2020.</figcaption>
-</figure> 
-
-
- <figure>
-  <img src="figures/state_responses_map.jpeg" alt="Trulli" style="width:90%">
-  <figcaption>Fig 3: Doubling time (in days) for various US states with at least 25 cases. </figcaption>
-</figure> 
-
-
-
-
-
+<a class="twitter-timeline"
+   href="https://twitter.com/eastonrwhite/likes"
+   data-width="auto"
+   data-height="600"
+   data-chrome="nofooter noscrollbar noborders transparent"
+   data-tweet-limit="3">Tweets by @eastonrwhite</a>
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
